src/test/deca/context/invalid/self/affectationNonValide4.deca
class A { }
class B { }

{
   A a ;
   B b ;

   a = b ;
}